Refactor the entire rag tool: 1.invovle spring ai framework for the entire project(remove embedding and storage modules) 2. refactor the parser module to use tika for the txt(pdf/txt/doc/docx etc.) part and ocr for the pic part, as well as add excelparser for excel doc