@@ -1,39 +1,43 @@
 package com.rag.boot.service;
 
+import com.rag.auth.context.RequestContext;
 import com.rag.auth.mapper.KbDocumentMapper;
 import com.rag.auth.service.KbConfigService;
 import com.rag.chunker.ChunkerFactory;
 import com.rag.core.api.DocumentVersionService;
-import com.rag.core.api.VectorStore;
-import com.rag.embedding.EmbeddingFactory;
-import com.rag.parser.DocumentParseFactory;
 import com.rag.core.config.ChunkConfig;
 import com.rag.core.config.EmbeddingConfig;
 import com.rag.core.config.WeaviateCollectionConfig;
-import com.rag.core.entity.*;
-import com.rag.core.enums.EmbeddingModelType;
+import com.rag.core.entity.KbDocument;
+import com.rag.core.entity.DocumentVersion;
 import com.rag.core.exception.RagException;
+import com.rag.core.factory.EmbeddingModelFactory;
+import com.rag.core.factory.VectorStoreRegistry;
+import com.rag.parser.DocumentParseFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.scheduling.annotation.Async;
+import org.springframework.ai.document.Document;
+import org.springframework.ai.embedding.EmbeddingModel;
+import org.springframework.ai.vectorstore.SearchRequest;
+import org.springframework.ai.vectorstore.VectorStore;
+import org.springframework.ai.vectorstore.filter.Filter;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardCopyOption;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Executor;
+import java.util.stream.Collectors;
 
 /**
- * RAG工具核心服务 —— Multi-Tenant v2
- * 按 kbId 从 DB 加载预设配置，自动完成 解析→分片→向量化→入库
+ * RAG 核心流水线服务（Spring AI 重构版）
+ * <p>
+ * 解析 → 分片 → 元数据富化 → 入库（VectorStore.add 内部完成向量化）→ 检索。
+ * 全程以 {@link Document} 为统一载体，向量化由 {@link VectorStore} 绑定的 {@link EmbeddingModel} 完成。
  */
 @Service
 public class RagToolService {
@@ -42,304 +46,260 @@ public class RagToolService {
 
     private final DocumentParseFactory parseFactory;
     private final ChunkerFactory chunkerFactory;
-    private final EmbeddingFactory embeddingFactory;
-    private final VectorStore vectorStore;
+    private final EmbeddingModelFactory embeddingModelFactory;
+    private final VectorStoreRegistry vectorStoreRegistry;
     private final DocumentVersionService versionService;
-    private final Executor taskExecutor;
     private final KbConfigService kbConfigService;
     private final KbDocumentMapper kbDocumentMapper;
+    private final Executor ragTaskExecutor;
 
     public RagToolService(DocumentParseFactory parseFactory,
                           ChunkerFactory chunkerFactory,
-                          EmbeddingFactory embeddingFactory,
-                          VectorStore vectorStore,
+                          EmbeddingModelFactory embeddingModelFactory,
+                          VectorStoreRegistry vectorStoreRegistry,
                           DocumentVersionService versionService,
-                          @Qualifier("ragTaskExecutor") Executor taskExecutor,
                           KbConfigService kbConfigService,
-                          KbDocumentMapper kbDocumentMapper) {
+                          KbDocumentMapper kbDocumentMapper,
+                          Executor ragTaskExecutor) {
         this.parseFactory = parseFactory;
         this.chunkerFactory = chunkerFactory;
-        this.embeddingFactory = embeddingFactory;
-        this.vectorStore = vectorStore;
+        this.embeddingModelFactory = embeddingModelFactory;
+        this.vectorStoreRegistry = vectorStoreRegistry;
         this.versionService = versionService;
-        this.taskExecutor = taskExecutor;
         this.kbConfigService = kbConfigService;
         this.kbDocumentMapper = kbDocumentMapper;
+        this.ragTaskExecutor = ragTaskExecutor;
     }
 
+    // ==================== 单文件处理 ====================
+
     /**
-     * 单文件完整处理链路（Multi-Tenant v2）
+     * 处理单个上传文件：解析 → 分片 → 向量化入库。
      */
-    public FileProcessResult processFile(MultipartFile file, Long kbId, Long userId) {
-        // 从知识库加载预设配置
-        KbConfigService.KbLoadedConfig loaded = kbConfigService.loadAllConfigs(kbId);
-        ChunkConfig chunkConfig = loaded.chunkConfig();
-        EmbeddingConfig embeddingConfig = loaded.embeddingConfig();
-        WeaviateCollectionConfig collectionConfig = loaded.collectionConfig();
+    public FileProcessResult processFile(MultipartFile file, Long kbId, String changeType) {
+        if (file == null || file.isEmpty()) {
+            throw new RagException("RAG_FILE_EMPTY", "上传文件为空");
+        }
+        KbConfigService.KbLoadedConfig loaded = kbConfigService.loadConfigs(kbId);
+        Long tenantId = loaded.kb().getTenantId();
 
-        File tempFile = null;
+        String originalFilename = file.getOriginalFilename();
+        Path tempPath = null;
         try {
-            // 1. 文件落盘
-            Path dir = Paths.get("./data/uploads").toAbsolutePath().normalize();
-            Files.createDirectories(dir);
-            String safeName = sanitizeFileName(file.getOriginalFilename());
-            String storedName = UUID.randomUUID().toString().substring(0, 8) + "_" + safeName;
-            tempFile = dir.resolve(storedName).toFile();
-            try (InputStream in = file.getInputStream()) {
-                Files.copy(in, tempFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+            tempPath = Files.createTempFile("rag-upload-", "-" + originalFilename);
+            file.transferTo(tempPath.toFile());
+            File tempFile = tempPath.toFile();
+
+            String contentType = detectContentType(originalFilename);
+            log.info("开始处理文件: {}, 类型: {}, 知识库: {}, 租户: {}",
+                    originalFilename, contentType, kbId, tenantId);
+
+            List<Document> docs = parseFactory.parse(tempFile);
+            String fullText = docs.get(0).getText();
+            if (fullText == null || fullText.isBlank()) {
+                throw new RagException("RAG_EMPTY_TEXT", "解析后文本为空: " + originalFilename);
             }
 
-            // 2. 文档解析
-            log.info("开始解析文件: kbId={}, fileName={}", kbId, file.getOriginalFilename());
-            DocumentParseResult parseResult = parseFactory.parse(tempFile);
-            if (parseResult.getFullText() == null || parseResult.getFullText().isBlank()) {
-                throw new RagException("RAG_SVC_001", "未提取到有效文本: " + file.getOriginalFilename());
-            }
+            ChunkConfig chunkConfig = loaded.chunkConfig();
+            List<Document> chunks = chunkerFactory.chunk(docs, chunkConfig);
 
-            // 3. 文本分片
-            log.info("开始分片: kbId={}, fileName={}, strategies={}", kbId, file.getOriginalFilename(), chunkConfig.getEnableStrategies());
-            List<Chunk> chunks = chunkerFactory.chunk(parseResult, chunkConfig);
+            String documentId = (String) docs.get(0).getMetadata().get("fileId");
+            String fileName = (String) docs.get(0).getMetadata().get("fileName");
 
-            // 4. 版本号生成与权限绑定
-            String documentId = parseResult.getMeta().getFileId();
-            String collectionClassName = collectionConfig.getClassName();
-            Long tenantId = loaded.kb().getTenantId();
-
+            // 版本计算
             DocumentVersion currentVersion = versionService.getCurrentVersion(documentId);
-            String changeType = currentVersion == null ? "INITIAL" : "MINOR";
-            String newVersion = versionService.generateNextVersion(documentId, changeType);
+            String effectiveChangeType = (changeType != null && !changeType.isBlank())
+                    ? changeType.toUpperCase() : (currentVersion == null ? "INITIAL" : "MINOR");
+            String newVersion = versionService.generateNextVersion(documentId, effectiveChangeType);
+            Long userId = RequestContext.currentUserId();
 
-            for (Chunk chunk : chunks) {
-                chunk.setDocumentId(documentId);
-                chunk.setDocumentVersion(newVersion);
-                chunk.setOwnerId(userId);
+            // 富化每个切片元数据
+            for (Document chunk : chunks) {
+                chunk.getMetadata().put("fileId", documentId);
+                chunk.getMetadata().put("documentVersion", newVersion);
+                chunk.getMetadata().put("ownerId", userId);
+                chunk.getMetadata().put("tenantId", tenantId);
+                chunk.getMetadata().put("kbId", kbId);
             }
 
-            DocumentVersion versionDoc = DocumentVersion.builder()
+            // 1. 版本记录
+            versionService.createVersion(DocumentVersion.builder()
                     .documentId(documentId)
                     .tenantId(tenantId)
                     .kbId(kbId)
                     .version(newVersion)
                     .chunkCount(chunks.size())
                     .operatorId(userId)
-                    .changeType(changeType)
-                    .changeRemark("文件上传入库")
-                    .collectionName(collectionClassName)
+                    .changeType(effectiveChangeType)
+                    .collectionName(loaded.collectionConfig().getClassName())
                     .currentActive(true)
-                    .build();
-            versionService.createVersion(versionDoc);
+                    .build());
 
-            // 登记文档到 kb_document 表
-            KbDocument kbDoc = KbDocument.builder()
+            // 2. 知识库文档记录
+            kbDocumentMapper.deleteByFileId(documentId);
+            kbDocumentMapper.insert(KbDocument.builder()
                     .kbId(kbId)
                     .tenantId(tenantId)
-                    .fileName(file.getOriginalFilename())
-                    .fileType(detectContentType(file.getOriginalFilename()))
+                    .fileName(fileName)
+                    .fileType(contentType)
                     .chunkCount(chunks.size())
                     .version(newVersion)
                     .ownerId(userId)
-                    .collectionName(collectionClassName)
-                    .uploadTime(new Date())
-                    .build();
-            kbDocumentMapper.insert(kbDoc);
+                    .collectionName(loaded.collectionConfig().getClassName())
+                    .build());
 
-            log.info("版本号生成: documentId={}, version={}, changeType={}, chunks={}",
-                    documentId, newVersion, changeType, chunks.size());
+            // 3. 入库（VectorStore.add 内部完成向量化）
+            EmbeddingConfig embeddingConfig = loaded.embeddingConfig();
+            WeaviateCollectionConfig collectionConfig = loaded.collectionConfig();
+            VectorStore store = vectorStoreRegistry.getWeaviateStore(
+                    collectionConfig.getClassName(), embeddingModelFactory.getModel(embeddingConfig),
+                    collectionConfig.getVectorDim());
 
-            // 5. Embedding向量化
-            log.info("开始向量化: kbId={}, fileName={}, chunks={}", kbId, file.getOriginalFilename(), chunks.size());
-            embeddingFactory.switchModel(embeddingConfig);
-            List<String> chunkTexts = chunks.stream().map(Chunk::getText).toList();
-            List<float[]> vectors = embeddingFactory.batchEmbed(chunkTexts, embeddingConfig);
-
-            if (vectors.size() != chunks.size()) {
-                throw new RagException("RAG_SVC_002", "向量数量与分片数量不一致");
+            // 删除旧切片（按 fileId），集合不存在时忽略
+            if (documentId != null) {
+                try {
+                    store.delete(new Filter.Expression(Filter.ExpressionType.EQ,
+                            new Filter.Key("fileId"), new Filter.Value(documentId)));
+                } catch (Exception e) {
+                    log.warn("删除旧切片失败（可忽略，可能集合尚未创建）: {}", e.getMessage());
+                }
             }
+            store.add(chunks);
 
-            // 6. 构建VectorRecord（写入 tenantId / kbId 元数据）
-            List<VectorRecord> records = new ArrayList<>();
-            for (int i = 0; i < chunks.size(); i++) {
-                Chunk chunk = chunks.get(i);
-                float[] vec = vectors.get(i);
-                List<Float> vecList = new ArrayList<>();
-                for (float v : vec) vecList.add(v);
-
-                records.add(VectorRecord.builder()
-                        .recordId(chunk.getChunkId())
-                        .text(chunk.getText())
-                        .vector(vecList)
-                        .fileName(chunk.getFileName())
-                        .fileType(chunk.getFileType())
-                        .chunkType(chunk.getChunkType() != null ? chunk.getChunkType().name() : null)
-                        .parentChunkId(chunk.getParentId())
-                        .pageNo(chunk.getPageNo())
-                        .tableFlag(chunk.getTableMeta() != null && !chunk.getTableMeta().isEmpty())
-                        .codeFlag(chunk.getCodeMeta() != null && !chunk.getCodeMeta().isEmpty())
-                        .sourcePath(parseResult.getMeta().getSourcePath())
-                        .fileId(parseResult.getMeta().getFileId())
-                        .textHash(chunk.getTextHash())
-                        .documentId(chunk.getDocumentId())
-                        .documentVersion(chunk.getDocumentVersion())
-                        .ownerId(chunk.getOwnerId())
-                        .tenantId(tenantId)
-                        .kbId(kbId)
-                        .extraMeta(chunk.getExtraMeta())
-                        .build());
-            }
-
-            // 7. 入库Weaviate（物理隔离集合）
-            vectorStore.initCollection(collectionConfig);
-
-            // 增量更新：先删除该文件的旧分片
-            if (parseResult.getMeta().getFileId() != null) {
-                vectorStore.deleteByFileId(parseResult.getMeta().getFileId(), collectionConfig.getClassName());
-            }
-
-            int inserted = vectorStore.batchInsert(records, collectionConfig);
-
+            log.info("文件入库完成: {}, 切片数: {}", fileName, chunks.size());
             return FileProcessResult.builder()
-                    .fileId(parseResult.getMeta().getFileId())
-                    .fileName(file.getOriginalFilename())
+                    .fileId(documentId)
+                    .fileName(fileName)
                     .chunkCount(chunks.size())
-                    .insertedCount(inserted)
+                    .insertedCount(chunks.size())
                     .success(true)
                     .build();
 
-        } catch (Exception e) {
-            log.error("文件处理失败: kbId={}, fileName={}", kbId, file.getOriginalFilename(), e);
-            return FileProcessResult.builder()
-                    .fileName(file.getOriginalFilename())
-                    .success(false)
-                    .error(e.getMessage())
-                    .build();
+        } catch (IOException e) {
+            throw new RagException("RAG_IO", "文件处理IO异常: " + e.getMessage(), e);
         } finally {
-            if (tempFile != null && tempFile.exists()) {
-                tempFile.delete();
+            if (tempPath != null) {
+                try {
+                    Files.deleteIfExists(tempPath);
+                } catch (IOException ignored) {
+                }
             }
         }
     }
 
-    /**
-     * 批量异步处理多个文件
-     */
-    @Async("ragTaskExecutor")
-    public CompletableFuture<List<FileProcessResult>> batchProcessFiles(
-            List<MultipartFile> files, Long kbId, Long userId) {
-        List<FileProcessResult> results = new ArrayList<>();
-        for (MultipartFile file : files) {
-            results.add(processFile(file, kbId, userId));
-        }
-        return CompletableFuture.completedFuture(results);
+    // ==================== 批量处理 ====================
+
+    public CompletableFuture<List<FileProcessResult>> batchProcessFiles(List<MultipartFile> files, Long kbId) {
+        return CompletableFuture.supplyAsync(() -> {
+            List<FileProcessResult> results = new ArrayList<>();
+            for (MultipartFile file : files) {
+                try {
+                    results.add(processFile(file, kbId, null));
+                } catch (Exception e) {
+                    log.error("批量处理文件失败: {}", e.getMessage());
+                    results.add(FileProcessResult.builder().success(false)
+                            .message(e.getMessage()).build());
+                }
+            }
+            return results;
+        }, ragTaskExecutor);
     }
 
-    /**
-     * 处理本地文件夹
-     */
-    public List<FileProcessResult> processDirectory(String dirPath, Long kbId, Long userId) {
-        File dir = new File(dirPath);
-        if (!dir.exists() || !dir.isDirectory()) {
-            throw new RagException("RAG_SVC_003", "目录不存在: " + dirPath);
-        }
+    // ==================== 目录处理 ====================
 
-        List<FileProcessResult> results = new ArrayList<>();
+    public List<FileProcessResult> processDirectory(String directoryPath, Long kbId) {
+        File dir = new File(directoryPath);
+        if (!dir.isDirectory()) {
+            throw new RagException("RAG_DIR", "目录不存在: " + directoryPath);
+        }
         File[] files = dir.listFiles();
-        if (files != null) {
-            for (File file : files) {
-                if (file.isFile()) {
-                    try {
-                        byte[] content = Files.readAllBytes(file.toPath());
-                        MultipartFile mf = new InMemoryMultipartFile(
-                                file.getName(), file.getName(),
-                                detectContentType(file.getName()), content);
-                        results.add(processFile(mf, kbId, userId));
-                    } catch (IOException e) {
-                        log.error("读取文件失败: {}", file.getName(), e);
-                    }
+        if (files == null || files.length == 0) {
+            return List.of();
+        }
+        List<FileProcessResult> results = new ArrayList<>();
+        for (File f : files) {
+            if (f.isFile()) {
+                try {
+                    MultipartFile mp = new InMemoryMultipartFile(f.getName(), Files.readAllBytes(f.toPath()), "application/octet-stream");
+                    results.add(processFile(mp, kbId, null));
+                } catch (IOException e) {
+                    results.add(FileProcessResult.builder().success(false).message(e.getMessage()).build());
                 }
             }
         }
         return results;
     }
 
-    /**
-     * 向量检索
-     */
-    public List<FileProcessResult> search(Long kbId, Long userId, String query, int topK) {
-        KbConfigService.KbLoadedConfig loaded = kbConfigService.loadAllConfigs(kbId);
+    // ==================== 检索 ====================
+
+    public List<FileProcessResult> search(String query, Long kbId, int topK) {
+        if (query == null || query.isBlank()) {
+            throw new RagException("RAG_QUERY_EMPTY", "检索内容不能为空");
+        }
+        KbConfigService.KbLoadedConfig loaded = kbConfigService.loadConfigs(kbId);
         EmbeddingConfig embeddingConfig = loaded.embeddingConfig();
         WeaviateCollectionConfig collectionConfig = loaded.collectionConfig();
 
-        // 向量化查询文本
-        embeddingFactory.switchModel(embeddingConfig);
-        List<float[]> vecs = embeddingFactory.batchEmbed(List.of(query), embeddingConfig);
-        List<Float> vecList = new ArrayList<>();
-        for (float v : vecs.get(0)) vecList.add(v);
+        EmbeddingModel model = embeddingModelFactory.getModel(embeddingConfig);
+        VectorStore store = vectorStoreRegistry.getWeaviateStore(
+                collectionConfig.getClassName(), model, collectionConfig.getVectorDim());
 
-        // 检索
-        List<VectorRecord> results = vectorStore.search(vecList, topK, null, collectionConfig.getClassName());
+        SearchRequest request = SearchRequest.builder()
+                .query(query)
+                .topK(topK <= 0 ? 5 : topK)
+                .build();
 
-        return results.stream()
-                .map(r -> FileProcessResult.builder()
-                        .fileId(r.getFileId())
-                        .fileName(r.getFileName())
-                        .success(true)
-                        .build())
-                .toList();
+        List<Document> documents = store.similaritySearch(request);
+        log.info("检索完成，命中 {} 条", documents.size());
+
+        return documents.stream().map(d -> FileProcessResult.builder()
+                .fileId((String) d.getMetadata().get("fileId"))
+                .fileName((String) d.getMetadata().get("fileName"))
+                .snippet(d.getText())
+                .score(d.getScore())
+                .success(true)
+                .build()).collect(Collectors.toList());
     }
 
-    /**
-     * 列出知识库文档
-     */
+    // ==================== 文档列表 ====================
+
     public List<KbDocument> listDocuments(Long kbId) {
         return kbDocumentMapper.findByKbId(kbId);
     }
 
-    // ============ 工具方法 ============
+    // ==================== 工具方法 ====================
 
-    private String sanitizeFileName(String name) {
-        if (name == null) return "unnamed";
-        return name.replaceAll("[/\\\\]", "_")
-                   .replaceAll("\\.{2,}", ".")
-                   .replaceAll("\\s+", "_");
-    }
-
-    private String detectContentType(String fileName) {
-        if (fileName == null) return "application/octet-stream";
-        String ext = fileName.substring(fileName.lastIndexOf('.') + 1).toLowerCase();
-        return switch (ext) {
-            case "pdf" -> "application/pdf";
-            case "docx" -> "application/vnd.openxmlformats-officedocument.wordprocessingml.document";
-            case "pptx" -> "application/vnd.openxmlformats-officedocument.presentationml.presentation";
-            case "xlsx" -> "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet";
-            case "txt", "md" -> "text/plain";
-            case "html", "htm" -> "text/html";
-            default -> "application/octet-stream";
-        };
+    private String detectContentType(String filename) {
+        if (filename == null) {
+            return "unknown";
+        }
+        int idx = filename.lastIndexOf('.');
+        return idx > 0 ? filename.substring(idx + 1).toLowerCase() : "unknown";
     }
 
     /**
-     * 内存MultipartFile实现
+     * 内存 MultipartFile 实现（用于目录导入）。
      */
     private static class InMemoryMultipartFile implements MultipartFile {
         private final String name;
-        private final String originalFilename;
-        private final String contentType;
         private final byte[] content;
+        private final String contentType;
 
-        InMemoryMultipartFile(String name, String originalFilename, String contentType, byte[] content) {
+        InMemoryMultipartFile(String name, byte[] content, String contentType) {
             this.name = name;
-            this.originalFilename = originalFilename;
-            this.contentType = contentType;
             this.content = content;
+            this.contentType = contentType;
         }
 
         @Override public String getName() { return name; }
-        @Override public String getOriginalFilename() { return originalFilename; }
+        @Override public String getOriginalFilename() { return name; }
         @Override public String getContentType() { return contentType; }
         @Override public boolean isEmpty() { return content.length == 0; }
         @Override public long getSize() { return content.length; }
         @Override public byte[] getBytes() { return content; }
         @Override public java.io.InputStream getInputStream() { return new java.io.ByteArrayInputStream(content); }
-        @Override public void transferTo(File dest) throws IOException { Files.write(dest.toPath(), content); }
+        @Override public void transferTo(File dest) throws IOException {
+            Files.write(dest.toPath(), content);
+        }
     }
 }
